test/libhyperion/syntaxTests/denominations/shor_as_identifier.hyp
contract C {
	uint constant shor = 1;
}
// ----
// ParserError 2314: (28-32): Expected identifier but got 'shor'
